[GB.WEB.FORM] * NEW: WebScrollView: A new container that just add scrollbars if its contents is too wide. * BUG: WebTable: Clear() also resets the horizontal scroll position. * BUG: Remove some debugging messages in the js library.
git-svn-id: svn://localhost/gambas/trunk@7559 867c0c6c-44f3-4631-809d-bfa615b0a4ec

--- a/comp/src/gb.web.form/gw-style.css
+++ b/comp/src/gb.web.form/gw-style.css
@@ -513,3 +513,16 @@ P:first-child,UL:first-child,OL:first-child {
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.gw-scrollview {
+  overflow: auto;
+  position: relative;
+}
+
+.gw-scrollview > DIV {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
